# remotty

./: .dockerignore  .gitignore  .golangci.yml  ARES_STATUS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  coverage.out  coverage_old.out  go.mod  go.sum  remotty.example.yaml  remotty.yaml  remotyy.example.yaml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml  ios.yml  release.yml
.hermes/: tasks.md
deploy/: Dockerfile  Dockerfile.signal  com.remotty.host.plist  com.remotty.signal.plist  com.remotyy.host.plist  com.remotyy.signal.plist  docker-compose.yml  prometheus-local.yml  prometheus.yml  remotty-host.service  remotty-signal.service  remotyy-host.service  remotyy-signal.service  turnserver.conf
docs/: architecture.md  build.md  configuration.md  deployment.md  feature-audit.md  hermes-integration.md  innovation-roadmap.md  ios-app.md  macky-analysis.md  macos-app.md  protocol.md  roadmap.md  screen-sharing-plan.md
remotty-macOS/: AppDelegate.swift  HostManager.swift  Info.plist  Package.swift
remotyy-macOS/: AppDelegate.swift  HostManager.swift  Info.plist  MenuBarView.swift  Package.swift  QRHostView.swift  SettingsView.swift  main.swift  remotyyMenuBarApp.swift
scripts/: build-dmg.sh  build-native.sh  gen-xcode-project.py  install.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
swift/: Package.swift
tui/: coverage.out  main.go  tui_ext_test.go  tui_test.go
web/: app.js  index.html  package-lock.json  package.json  style.css  vite.config.mjs  vite.config.ts
(+116 files in other folders)
